--- a/cubey/cubey.vcxproj.filters
+++ b/cubey/cubey.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="UI.cpp" />
     <ClCompile Include="Time.cpp" />
+    <ClCompile Include="Input.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h" />
@@ -17,6 +18,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="Time.h" />
+    <ClInclude Include="Input.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
