Added transform base, fixed camera orientation problems added a simple test scene

--- a/cubey/cubey.vcxproj
+++ b/cubey/cubey.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="Time.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
