implenmented basic mesh class

--- a/cubey/cubey.vcxproj
+++ b/cubey/cubey.vcxproj
@@ -103,6 +103,7 @@
     <ClInclude Include="Event.h" />
     <ClInclude Include="Interfaces.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Transform.h" />
