reworked mesh class

--- a/cubey/cubey.vcxproj
+++ b/cubey/cubey.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="Interfaces.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="UI.cpp" />
