--- a/cubey/cubey.vcxproj.filters
+++ b/cubey/cubey.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Interfaces.cpp" />
+    <ClCompile Include="Mesh.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h" />
