more cleanups, change how the event channel works, move almost everything out of the main.cpp

--- a/cubey/cubey.vcxproj
+++ b/cubey/cubey.vcxproj
@@ -90,6 +90,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CameraTest.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Interfaces.cpp" />
@@ -102,6 +103,7 @@
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CameraTest.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="cubey.h" />
     <ClInclude Include="Engine.h" />
